<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.shenoy.anish.whosfree.SignUpActivity"
    style="@style/AuthBackground">

        <ImageView
            android:id="@+id/backgroundImage"
            style="@style/AuthBackgroundImage" />

        <TextView
            android:id="@+id/title"
            style="@style/AuthTitle" />

        <TextView
            android:id="@+id/subtitle"
            style="@style/AuthTitle.AuthSubTitle" />

        <LinearLayout
            android:id="@+id/editTextLayout"
            style="@style/AuthFieldContainer" >

            <EditText
                android:id="@+id/firstNameField"
                style="@style/AuthEditText"
                android:hint="First Name">

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/lastNameField"
                style="@style/AuthEditText"
                android:hint="Last Name" />

            <EditText
                android:id="@+id/passwordField"
                style="@style/AuthEditText"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/emailField"
                style="@style/AuthEditText"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress" />
        </LinearLayout>

    <ImageView
        android:id="@+id/buttonDivider"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_below="@id/editTextLayout"
        android:layout_centerHorizontal="true"
        android:src="@drawable/button_divider" />

        <Button
            android:id="@+id/signupButton"
            style="@style/AuthButton"
            android:text="@string/sign_up_button_label"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/editTextLayout"
            android:layout_toLeftOf="@id/buttonDivider"
            android:layout_marginRight="0dp" />

        <Button
            android:id="@+id/cancelButton"
            style="@style/AuthButton"
            android:text="CANCEL"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/editTextLayout"
            android:layout_toRightOf="@id/buttonDivider"
            android:layout_marginLeft="0dp" />

</RelativeLayout>
